compiler/fir/analysis-tests/testData/resolve/smartcasts/kt68725.kt
fun test() {
    <!INCOMPATIBLE_TYPES!>"" is Int<!>
}